--- a/en/p/proforma.774476.wikitext
+++ b/en/p/proforma.774476.wikitext
@@ -52,3 +52,10 @@ From {{bor|nn|la|prō fōrmā}}.
 
 ===References===
 * {{R:ND}}
+----
+==Spanish==
+
+===Adjective===
+{{es-adj-inv}}
+
+# [[pro forma]]
