--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -59,7 +59,7 @@ From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japan
 * Spanish: {{t|es|Nintendo}}
 * Thai: {{t|th|นินเทนโด|tr=Ninthendo}}
 * Uyghur: {{t|ug|نىنتېندو}}
-* Vietnamese: {{t|vi|Nintendo}}
+* Vietnamese: {{t|vi|Nintendo}}, {{t|vi|Nhậm Thiên Đường}}
 {{trans-bottom}}
 
 [[Category:English trademarks]]
