--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -28,7 +28,9 @@ From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japan
 * Romanian: {{t|ro|Nintendo}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|Нинтендо}}
-*: Roman: {{t+|sh|Nintendo}}
+*: Roman: {{t|sh|Nintendo}}
+* Spanish: {{t|es|Nintendo}}
+* Portuguese: {{t|pt|Nintendo}}
 * Tamil: {{t|ta|நிண்டெண்டோ}}
 * Thai: {{t|th|นินเทนโด}}
 {{trans-bottom}}
