--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -20,8 +20,8 @@ From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japan
 *: Mandarin: {{t+|cmn|任天堂|tr=Rèntiāntáng|sc=Hani}}
 *: Cantonese: {{t|yue|任天堂|tr=Jam1 tin1 tong4|sc=Hani}}
 * Bengali: {{t|bn|নিন্টেন্ডো}}
-* Hindi: {{t+|hi|निंटेंडो}}
-* Italian: {{t|it|Nintendo|f}}
+* Hindi: {{t|hi|निंटेंडो}}
+* Italian: {{t|it|Nintendo}}
 * Japanese: {{t|ja|任天堂|tr=Nintendō}}
 {{trans-mid}}
 * Korean: {{t+|ko|닌텐도}}
@@ -29,10 +29,11 @@ From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japan
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|Нинтендо}}
 *: Roman: {{t|sh|Nintendo}}
-* Spanish: {{t|es|Nintendo}}
-* Portuguese: {{t|pt|Nintendo}}
+* Spanish: {{t|es|Nintendo|f}}
+* Portuguese: {{t|pt|Nintendo|f}}
 * Tamil: {{t|ta|நிண்டெண்டோ}}
 * Thai: {{t|th|นินเทนโด}}
+* Vietnamese: 
 {{trans-bottom}}
 
 ===Noun===
