--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -33,7 +33,7 @@ From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japan
 * Portuguese: {{t|pt|Nintendo|f}}
 * Tamil: {{t|ta|நிண்டெண்டோ}}
 * Thai: {{t|th|นินเทนโด}}
-* Vietnamese: 
+* Vietnamese: {{t|vi|Nintendo}}, {{t|vi|Nhiệm Thiên Đường}}
 {{trans-bottom}}
 
 ===Noun===
