--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -26,9 +26,7 @@ From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japan
 {{trans-mid}}
 * Korean: {{t+|ko|닌텐도}}
 * Romanian: {{t|ro|Nintendo}}
-* Serbo-Croatian:
-*: Cyrillic: {{t|sh|Нинтендо}}
-*: Roman: {{t|sh|Nintendo}}
+* Serbo-Croatian: {{t|sh|Нинтендо}}
 * Spanish: {{t|es|Nintendo|f}}
 * Portuguese: {{t|pt|Nintendo|f}}
 * Tamil: {{t|ta|நிண்டெண்டோ}}
