--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -30,7 +30,7 @@ From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japan
 * Spanish: {{t|es|Nintendo|f}}
 * Portuguese: {{t|pt|Nintendo|f}}
 * Tamil: {{t|ta|நிண்டெண்டோ}}
-* Thai: {{t|th|นินเทนโด|Ninthendo}}
+* Thai: {{t|th|นินเทนโด|tr=Ninthendo}}
 * Vietnamese: {{t|vi|Nintendo}}, {{t|vi|Nhiệm Thiên Đường}}
 {{trans-bottom}}
 
