--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -27,6 +27,7 @@ From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japan
 * Korean: {{t+|ko|닌텐도}}
 * Romanian: {{t|ro|Nintendo}}
 * Serbo-Croatian: {{t|sh|Нинтендо}}
+* Russian: {{t|ru|Нинте́ндо}}, {{t|ru|Нинтендо|sc=Cyrl}}
 * Spanish: {{t|es|Nintendo|f}}
 * Portuguese: {{t|pt|Nintendo|f}}
 * Tamil: {{t|ta|நிண்டெண்டோ}}
