--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -21,12 +21,13 @@ From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japan
 *: Cantonese: {{t|yue|任天堂|tr=Jam1 tin1 tong4|sc=Hani}}
 * Bengali: {{t|bn|নিন্টেন্ডো}}
 * Hindi: {{t|hi|निंटेंडो}}
-* Italian: {{t|it|Nintendo}}
+* Esperanto: {{t|eo|Nintendo}}
 * Japanese: {{t|ja|任天堂|tr=Nintendō}}
 {{trans-mid}}
 * Korean: {{t+|ko|닌텐도}}
 * Romanian: {{t|ro|Nintendo}}
 * Serbo-Croatian: {{t|sh|Нинтендо}}
+* Italian: {{t|it|Nintendo}}
 * Russian: {{t|ru|Нинте́ндо}}, {{t|ru|Нинтендо|sc=Cyrl}}
 * Spanish: {{t|es|Nintendo|f}}
 * Portuguese: {{t|pt|Nintendo|f}}
