--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -22,7 +22,7 @@ From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japan
 * Bengali: {{t|bn|নিন্টেন্ডো}}
 * Hindi: {{t|hi|निंटेंडो}}
 * Esperanto: {{t|eo|Nintendo}}
-* Japanese: {{t|ja|任天堂|tr=Nintendō}}
+* Japanese: {{t|ja|任天堂}}, {{t|ja|ニンテンドー|tr=Nintendō}}
 {{trans-mid}}
 * Korean: {{t+|ko|닌텐도}}
 * Romanian: {{t|ro|Nintendo}}
