--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -980,7 +980,7 @@ From {{inh|non|gem-pro|*at|t=at, to}}. Cognate with {{cog|ang|æt}}, {{cog|ofs|e
 ==Pipil==
 
 ===Etymology===
-From {{der|ppl|azc-nah-pro|*aatl}}, from {{der|ppl|azc-pro|*pa|*pa-ta}}.
+From {{der|ppl|azc-nah-pro|*aatl}}, from {{der|ppl|azc-pro|*pa|*pa-ta}}. Compare {{cog|nci|ātl||water}}
 
 ===Pronunciation===
 * {{IPA|ppl|/at/}}
