--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -986,12 +986,12 @@ From {{der|ppl|azc-nah-pro|*aatl}}, from {{der|ppl|azc-pro|*pa|*pa-ta}}. Compare
 * {{IPA|ppl|/at/}}
 
 ===Noun===
-{{ppl-noun|head=at|pl=ajat}}
+{{ppl-noun|head=at|pl=ahat}}
 
 # [[water]]
 #: {{ux|ppl|Xiconi chopi '''at'''|Drink some '''water'''}}
 # [[rain]]
-#: {{ux|ppl|Axcan wetzi '''at'''|Today it's '''rain'''ing}}
+#: {{ux|ppl|Axcan huetzi '''at'''|Today it's '''rain'''ing}}
 # [[river]]
 #: {{ux|ppl|Nemi ne tacat itempan ne '''at'''|The man is on the '''river'''bank}}
 
