--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -56,8 +56,8 @@ The insertion of ⟨s⟩—a 16th century spelling modification—is due to a ch
 |islander|island dispenser|island display|island-hop|island maze|island platform|island position|island site|island state|island universe|islandwide|islandy|Kangaroo Island
 |kitchen island|Little Island|Long Island|low island|Mersea Island|no man is an island
 |Norfolk Island|North Island|Puget Island|Rhode Island|Rock Island
-|safety island|security island|Island|sea-island|South Island|Stewart Island|tidal island
-|traffic island|Valentia Island|Vancouver Island|White Island}}
+|safety island|security island|Island|sea-island|South Island|Stewart Island|St. Lawrence Island
+|tidal island|traffic island|Valentia Island|Vancouver Island|White Island}}
 
 ====Related terms====
 * {{l|en|insular}}
