--- a/en/a/annate.745877.wikitext
+++ b/en/a/annate.745877.wikitext
@@ -14,6 +14,7 @@ See {{m|en|ann}}.
 ===Translations===
 {{trans-top|Catholic benefice}}
 {{trans-mid}}
+* Polish: {{t|pl|annaty|f-p}}
 {{trans-bottom}}
 
 {{trans-top|Scottish law}}
