--- a/en/o/owre.720028.wikitext
+++ b/en/o/owre.720028.wikitext
@@ -2,8 +2,8 @@
 
 {{rfp|en}}
 
-===Etymology 1===
-Forms.
+===Etymology===
+Alternative forms.
 
 ====Noun====
 {{en-noun}}
@@ -12,22 +12,6 @@ Forms.
 # {{obsolete form of|en|oar}}
 # {{obsolete form of|en|ore}}
 # {{obsolete form of|en|our}}
-
-===Etymology 2===
-From {{inh|en|enm|oure}}, from {{inh|en|ang|ūr}}, from {{inh|en|gmw-pro|*ūr}}, from {{inh|en|gem-pro|*ūraz}}, {{m|gem-pro|*ūrô}}. Perhaps a {{doublet|en|ure|urus|nocap=1}}.
-
-===Pronunciation===
-* {{a|RP}} {{IPA|en|/ˈaʊə(ɹ)/}}
-* {{a|GA}} {{IPA|en|/ˈaʊ(ə)ɹ/}}
-
-====Noun====
-{{en-noun}}
-
-# {{lb|en|obsolete}} {{rfv-sense|en}} The [[aurochs]].<!--{{rfquotek|en|Edmund Spenser}}-->
-
-=====Related terms=====
-* {{l|en|aurochs}}
-* {{l|en|ure}}, {{l|en|urus}} {{q|perhaps related}}
 
 ===Anagrams===
 * {{anagrams|en|a=eorw|Rowe|WORE|ower|wore}}
