--- a/en/l/LRRP.6788.wikitext
+++ b/en/l/LRRP.6788.wikitext
@@ -6,6 +6,6 @@
 * {{rhymes|en|ɜː(ɹ)p}}
 
 ===Noun===
-{{en-noun}}
+{{en-noun|~}}
 
 # {{initialism of|en|[[long-range]] [[reconnaissance]] [[patrol]]}}
