--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -78,7 +78,7 @@ Akin to {{cog|sco|thoch||though}}, {{cog|stq|dach||though}}, {{cog|fy|dôch}}, {
 {{en-con}}
 
 # Despite the fact that; [[although]].
-#: {{ux|en|'''Though''' it’s risky, it’s worth taking the chance.}}
+#: {{ux|en|'''Though''' it is risky, it is worth taking the chance.}}
 #* {{RQ:Jefferies Amateur Poacher|chapter=II|passage=Orion hit a rabbit once; but '''though''' sore wounded it got to the bury, and, struggling in, the arrow caught the side of the hole and was drawn out. Indeed, a nail filed sharp is not of much avail as an arrowhead; you must have it barbed, and that was a little beyond our skill.}}
 # {{lb|en|archaic}} [[if|If]], [[that]], [[even if]].
 #: {{ux|en|We shall be not sorry '''though''' the man die tonight.}}
