/* West Makian */ <at#65081741>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -1396,6 +1396,23 @@ Cognate with {{cog|yai|ашт}}.
 
 ----
 
+==West Makian==
+
+===Pronunciation===
+* {{IPA|mqs|/at/}}
+
+===Noun===
+{{head|mqs|noun}}
+
+# [[man]]
+# [[male]]
+# [[husband]]
+
+===References===
+* {{R:mqs:Voorhoeve:1982}}
+
+----
+
 ==Wolof==
 
 ===Pronunciation===
