--- a/en/e/enumerate.34095.wikitext
+++ b/en/e/enumerate.34095.wikitext
@@ -1,7 +1,8 @@
 ==English==
 
 ===Etymology===
-From {{der|en|la|enumerātus}}, from {{m|la|enumerō}}.
+{{root|en|ine-pro|*nem-}}
+From {{bor|en|la|enumerātus}}, from {{m|la|enumerō}}.
 
 ===Pronunciation===
 * {{a|RP}} {{IPA|en|/ɪˈnjuː.məˌɹeɪt/}}
