--- a/en/o/objective function.774534.wikitext
+++ b/en/o/objective function.774534.wikitext
@@ -10,8 +10,9 @@
 {{trans-top|mathematical function}}
 * Czech: {{t|cs|účelová funkce|f}}, {{t|cs|cílová funkce|f}}
 * Finnish: {{t|fi|tavoitefunktio}}, {{t|fi|kohdefunktio}}
-* Hungarian: {{t+|hu|célfüggvény}}
+* German: {{t|de|Zielfunktion|f}}
 {{trans-mid}}
+* Hungarian: {{t+|hu|célfüggvény}}
 * Icelandic: {{t|is|kostnaðarfall|n}}, {{t|is|viðfangsfall|n}}
 * Russian: {{t|ru|целевая функция}}
 {{trans-bottom}}
