/* Old French */ <quatorze#65157127>

--- a/en/q/quatorze.26056.wikitext
+++ b/en/q/quatorze.26056.wikitext
@@ -64,7 +64,8 @@ From {{inh|nrf|fro|quatorze}}, from {{inh|nrf|la|quattuordecim}}.
 From {{inh|fro|la|quattuordecim}}.
 
 ===Pronunciation===
-* {{IPA|fro|/kaˈtɔrd͡zə/}}
+* {{IPA|fro|/kaˈtɔrdzə/|qual1=early}}
+* {{IPA|fro|/kaˈtɔrzə/|qual1=late}}
 
 ===Numeral===
 {{enum|fro|treze|quinze|cardinal number|14}}
