--- a/en/w/white gold.855391.wikitext
+++ b/en/w/white gold.855391.wikitext
@@ -32,6 +32,7 @@
 * Japanese: {{t|ja|ホワイトゴールド|tr=howaitogōrudo|sc=Jpan}}, {{t|ja|白色金|tr=はくしょくきん, hakushokukin|sc=Jpan}}
 * Persian: {{t|fa|طلا سفید|tr=talâ-sefid|sc=fa-Arab}}
 * Portuguese: {{t|pt|ouro branco|m}}
+* Romanian: {{t+|ro|aur alb|n}}
 * Russian: {{t+|ru|бе́лое зо́лото|n}}
 * Spanish: {{t|es|oro blanco|m}}
 * Swedish: {{t|sv|vitguld|n}}
