--- a/en/r/rosier.746684.wikitext
+++ b/en/r/rosier.746684.wikitext
@@ -9,7 +9,7 @@
 # {{en-comparative of|rosy}}
 
 ===Etymology 2===
-From {{der|en|fro|rosier}}.
+From {{der|en|fro|rosier}}. {{doublet|en|rosary}}.
 
 ====Noun====
 {{en-noun}}
