--- a/en/d/dormouse.8238.wikitext
+++ b/en/d/dormouse.8238.wikitext
@@ -3,7 +3,7 @@
 {{wikipedia}}
 
 ===Alternative forms===
-* {{alt|en|doormouse||unetymological misspelling/{{glossary|eggcorn}}}}
+* {{alt|en|doormouse||unetymological misspelling/{{l|en|eggcorn}}}}
 
 ===Etymology===
 From {{inh|en|enm|dormous}}, of uncertain origin. Possibly from a dialectal {{m|enm||*dor-}}, from {{der|en|non|dár||benumbed}} + {{m|enm|mous||mouse}}. More at {{l|en|doze}}, {{l|en|mouse}}.
