--- a/en/s/she-goat.802749.wikitext
+++ b/en/s/she-goat.802749.wikitext
@@ -12,8 +12,8 @@ From {{af|en|she-|goat}}.
 {{en-noun}}
 
 # A [[female]] [[goat]].
-#: {{syn|en|nanny goat|nanny}}
-#: {{ant|en|he-goat|billy goat|billy|buck}}
+#: {{syn|en|nanny goat|nanny|doe}}
+#: {{coordinate terms|en|he-goat|billy goat|billy|buck|goat|kid}}
 
 ====Translations====
 {{trans-top|female goat}}
