--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -55,6 +55,7 @@ Colloquial form of {{m|en|yea}} or {{m|en|yes}}. Compare {{m|en|nah}}
 * Serbo-Croatian: {{t+|sh|da}} {{t+|sh|da}}
 *: Cyrillic: {{t|sh|да̑|sc=Cyrl}}
 *: Roman: {{t+|sh|dȃ|sc=Latn}}
+* Sicilian: {{t+|scn|sì}}, {{t|scn|sè}}, {{t|scn|certu}}
 * Slovak: {{t+|sk|no}} <!-- Yes, this is in the right place, "no" means "yeah" or "yep" in Czech, Slovak, Polish -->
 * Slovene: {{t+|sl|ja}}
 * Spanish: {{t+|es|sí}}, {{t|es|seh}}, {{t|es|sipi}}
