/* Translations */Added Sicilian <yeah#65240304>

--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -90,6 +90,7 @@ Colloquial form of {{m|en|yea}} or {{m|en|yes}}. Compare {{m|en|nah}}
 * Japanese: {{t|ja|やった|tr=yatta}}
 * Portuguese: {{t+|pt|é!}}, {{t|pt|isso aí!}}
 * Russian: {{t+|ru|да!}}, {{t+|ru|ура́!}}, {{t|ru|э-ге́й!}}
+* Sicilian: {{t+|scn|forza ḍḍocu!}}
 * Ukrainian: {{t+|uk|так!}}
 {{trans-bottom}}
 
