~ due to uncountable meat sense <pig#65243808>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -18,7 +18,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * {{rhymes|en|ɪɡ|s=1}}
 
 ====Noun====
-{{en-noun}}
+{{en-noun|~}}
 
 # Any of several intelligent [[mammalian]] species of the genus ''[[Sus]]'', having [[cloven]] [[hooves]], [[bristle]]s and a [[nose]] adapted for [[digging]]; especially the [[domestication|domesticated]] [[animal]] ''Sus domesticus''.
 #: {{syn|en|Thesaurus:pig}}
