--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -30,7 +30,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 #: {{ux|en|Some religions prohibit their adherents from eating '''pig'''.}}
 #* '''2005''', Ross Eddy Osborn, ''Thorns of a Tainted Rose'' {{ISBN|0741425319}}, [https://books.google.com.au/books?id=cdg7kQFFcYoC&pg=PA196&dq=%22Miss+Chastene,+could+you+fetch+me+out+an+extra+plate+of+pig%22&hl=en&sa=X&redir_esc=y#v=onepage&q=%22Miss%20Chastene%2C%20could%20you%20fetch%20me%20out%20an%20extra%20plate%20of%20pig%22&f=false page 196]:
 #*: "Miss Chastene, could you fetch me out an extra plate of '''pig''' and biscuit. My partner can't do without your marvelous cooking."
-# A light [[pink]]ish-red [[colour]], like that of a pig (also called pig pink).
+# {{lb|en|uncountable}} A light [[pink]]ish-red [[colour]], like that of a pig (also called pig pink).
 #: {{color panel|FCD7DE}}
 #* '''2019''', Bee Smith, ''Queen Bee's Party''
 #*: So far on the streets there's been a lot of metallic pink (the kind of pink as in the shade of '''pig''' you get, and this is exactly the shade of the diary I've been writing in) {{...}}
