--- a/en/d/dows.746916.wikitext
+++ b/en/d/dows.746916.wikitext
@@ -9,5 +9,10 @@
 
 # {{en-third-person singular of|dow}}
 
+===Noun===
+{{head|en|noun form}}
+
+# {{plural of|en|dow}}
+
 ===Anagrams===
 * {{anagrams|en|a=dosw|swod}}
