--- a/en/i/in one's right mind.775705.wikitext
+++ b/en/i/in one's right mind.775705.wikitext
@@ -29,7 +29,7 @@
 ====Translations====
 {{trans-top|sane}}
 * Finnish: {{t+|fi|järjissään}}
-* German: {{t|de|bei Sinnen}}, {{t|de|bei klarem Verstand sein}}
+* German: {{t|de|bei Sinnen}}, {{t|de|bei klarem Verstand}}
 * Hungarian: {{t+|hu|normális}}, {{t|hu|épeszű}}, {{t+|hu|épelméjű}}, {{t|hu|eszénél van}}
 {{trans-mid}}
 * Polish: {{t|pl|przy zdrowych zmysłach}}
