===Prepositional Phrase=== {{head|en|prepositional phrase}} <in one's right mind#65249286>

--- a/en/i/in one's right mind.775705.wikitext
+++ b/en/i/in one's right mind.775705.wikitext
@@ -3,8 +3,8 @@
 ===Pronunciation===
 * {{audio|en|en-au-in one's right mind.ogg|Audio (AU)}}
 
-===Adjective===
-{{head|en|adjective}}
+===Prepositional Phrase===
+{{head|en|prepositional phrase}}
 
 # {{lb|en|idiomatic}} Thinking [[clearly]], [[sensibly]], and [[reasonably]].
 #* {{RQ:Charlotte Bronte Shirley|chapter=1|passage=“Is Mike Hartley '''in his right mind''', do you think, sir?” inquired Sweeting simply.<br>“Can't tell, Davy. He may be crazed, or he may be only crafty.”}}
