t+fi:[[esine]] ([[WT:EDIT|Assisted]]) <thing#65254338>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -329,6 +329,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 
 {{trans-top|law: corporeal object}}
 * Catalan: {{t+|ca|cosa|f}}
+* Finnish: {{t+|fi|esine}}
 * German: {{t+|de|Sache|f}}
 {{trans-mid}}
 * Hungarian: {{t+|hu|dolog}}
