--- a/en/m/multiplication.26254.wikitext
+++ b/en/m/multiplication.26254.wikitext
@@ -121,6 +121,7 @@ When applied to whole numbers, multiplication can be considered as repeated addi
 * Finnish: {{t+|fi|kertolasku}}
 * French: {{t+|fr|multiplication|f}}
 * Georgian: {{t|ka|გამრავლება}}
+* German: {{t+|de|Multiplikation|f}}
 * Greek: {{t+|el|πολλαπλασιασμός|m}}
 *: Ancient: {{t|grc|πολλαπλασιασμός|m}}
 * Hungarian: {{t+|hu|szorzás}}
