--- a/en/i/individualize.742107.wikitext
+++ b/en/i/individualize.742107.wikitext
@@ -16,9 +16,11 @@
 {{trans-top|to give something its own individality}}
 {{trans-mid}}
 * German: {{t+|de|individualisieren}}
+* Ukrainian: {{t|uk|індивідуалізува́ти|impf|pf}}
 {{trans-bottom}}
 
 {{trans-top|to modify something to suit an individual}}
 * Finnish: {{t+|fi|yksilöllistää}}
 {{trans-mid}}
+* Ukrainian: {{t|uk|індивідуалізува́ти|impf|pf}}
 {{trans-bottom}}
