--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -56,7 +56,7 @@ From {{suffix|en|bend|t}}.
 * French: {{t+|fr|courbé}}
 * Galician: {{t+|gl|torto}}, {{t|gl|encartado}}
 * Georgian: {{t|ka|გაღუნული|sc=Geor}}
-* German: {{t+|de|gebeugt}}
+* German: {{t+|de|gebeugt}}, {{t+|de|verbogen}}
 * Greek:
 *: Ancient: {{t|grc|σκολιός}}, {{t|grc|καμψός}}, {{t|grc|καμπύλος}}, {{t|grc|σκαμβός}}
 * Hungarian: {{t+|hu|hajlott}}, {{t+|hu|görbe}}
@@ -90,6 +90,7 @@ From {{suffix|en|bend|t}}.
 * Bulgarian: {{t|bg|педерастки}}
 * Chinese:
 *: Mandarin: {{t+|cmn|彎}}, {{t+|cmn|弯|tr=wān}}, {{t|cmn|同性恋的}}
+* German: {{t+|de|gay}}, {{t+|de|homosexuell}}
 {{trans-mid}}
 * Irish: {{t|ga|lúbtha}}, {{t|ga|cam}}
 * Polish: {{t|pl|przegięty|m}}
@@ -99,6 +100,7 @@ From {{suffix|en|bend|t}}.
 {{trans-top|Determined or insistent}}
 * Bulgarian: {{t+|bg|склонен}}
 * Dutch: {{t|nl|met de zinnen gezet op}}
+* German: {{t+|de|entschieden}}
 {{trans-mid}}
 * Italian: {{t+|it|fissato|m}}
 * Russian: {{t+|ru|повёрнутый}}
