--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -304,8 +304,8 @@ From {{bor|ro|la|minimum}}
 ===Noun===
 {{ro-noun|n|-}}
 
-# {{l|en|minimum}}
-# [[modicum]] {{gloss|small quantity}}
+# {{l|en|minimum}} {{gloss|lowest limit}}
+# {{l|en|minimum}}, [[modicum]] {{gloss|small quantity}}
 
 ====Declension====
 {{ro-noun-n|n=sg}}
