--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -56,6 +56,7 @@ From {{inh|en|enm|coppe}}, from {{inh|en|ang|*coppe}}, as in {{m|ang|ātorcoppe|
 {{trans-top|to capture, to take ''(informal)''}}
 * Bulgarian: {{t+|bg|хващам|sc=Cyrl}}, {{t+|bg|пипвам|sc=Cyrl}}, {{t+|bg|арестувам|sc=Cyrl}}
 * Finnish: {{t+|fi|napata}}, {{t+|fi|ottaa}}
+* German: {{t+|de|erlangen}}
 * Greek: {{t+|el|παίρνω}}
 {{trans-mid}}
 * Italian: {{t+|it|afferrare}}, {{t+|it|prendere}}, {{t+|it|catturare}}
