--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -62,6 +62,8 @@ From {{inh|en|enm|plege}}, from {{der|en|xno|plege}}, from {{der|en|fro|plege}} 
 {{trans-top|to deposit something as a security; to pawn}}
 * Bulgarian: {{t+|bg|залагам}}
 * Catalan: {{t+|ca|penyorar}}, {{t+|ca|empenyorar}}
+* Chinese:
+*: Mandarin:  {{t+|cmn|抵押|tr=dǐyā}}
 * Czech: {{t+|cs|zastavit}}
 * Dutch: {{t+|nl|verpanden}}
 * Finnish: {{t+|fi|pantata}}
