t+ti:[[ማንቲለ]] ([[WT:EDIT|Assisted]]) <rabbit#65331201>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -256,6 +256,7 @@ Related forms include {{cog|frm|rabouillet|t=baby rabbit}} and in {{cog|fr|rabot
 * Telugu: {{t+|te|కుందేలు}}
 * Thai: {{t+|th|กระต่าย}}
 * Tibetan: {{t|bo|རི་བོང}}, {{t|bo|ཡོས|sc=Tibt}} {{qualifier|as in “year of the rabbit”}}
+* Tigrinya: {{t|ti|ማንቲለ}}
 * Torres Strait Creole: {{t-needed|tcs}}
 * Tswana: {{t|tn|mmutla}}
 * Turkish: {{t+|tr|ada tavşanı}}, {{t+|tr|tavşan}}, {{t|tr|kuyan}}
