--- a/en/o/Oaxaca.775466.wikitext
+++ b/en/o/Oaxaca.775466.wikitext
@@ -76,6 +76,7 @@ Borrowed from {{bor|en|es|Oaxaca}}, from {{der|en|nci|Huāxyacac}}, from {{m|nci
 # A [[semihard]] [[white]] [[cheese]] from the [[Oaxaca]] region of [[Mexico]].
 
 {{topics|en|States of Mexico}}
+[[Category:English terms derived from toponyms]]
 
 ----
 
