--- a/en/e/ECG.26243.wikitext
+++ b/en/e/ECG.26243.wikitext
@@ -5,6 +5,7 @@
 {{en-noun}}
 
 # {{lb|en|cardiology}} {{initialism of|en|electrocardiogram}}
+#: {{syn|en|EKG}}
 
 ===Proper noun===
 {{en-proper noun}}
