--- a/en/e/EKG.26212.wikitext
+++ b/en/e/EKG.26212.wikitext
@@ -12,3 +12,15 @@ From {{bor|en|de|EKG}}. Initialism of {{etyl|de|en}} {{m|de|Elektrokardiogramm|'
 * {{anagrams|en|a=egk|keg}}
 
 [[Category:English initialisms]]
+
+----
+
+==German==
+
+===Noun===
+{{head|de|noun}}
+
+# {{lb|de|cardiology}} {{m|en|ECG||electrogardiogram}} {{abbreviation of|de|Elektrokardiogramm}}
+
+====Descendants====
+* {{desc|en|EKG}}
