--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -3,7 +3,7 @@
 
 ===Etymology===
 {{root|en|ine-pro|*h₁em-}}
-From {{inh|en|enm|consumen}}, from {{der|en|fro|consumer}}, from {{der|en|la|consumo|cōnsūmere}}.
+From {{inh|en|enm|consumen}}, from {{der|en|fro|consumer}}, from {{der|en|la|consumo|cōnsūmere, cōnsūmō}}, from {{affix|la|con-|gloss1=with, together|sūmō|gloss2=take; consume}}, from {{prefix|la|sub|emō|t2=to buy, take}}, ultimately from {{der|en|ine-pro|*h₁em-||to take, distribute}}, possibly related to the root {{m|ine-pro|*nem-||to take or give one's due}}.
 
 ===Pronunciation===
 * {{a|RP|UK|Australia}} {{IPA|en|/kənˈsjuːm/}}
