/* Franco-Provençal */ <chin#65348832>

--- a/en/c/chin.7352.wikitext
+++ b/en/c/chin.7352.wikitext
@@ -408,7 +408,7 @@ From {{inh|rup|la|pīnus}}. Compare {{cog|ro|pin}}.
 From {{inh|frp|la|canem}}, accusative singular of {{m|la|canis}}.
 
 ===Pronunciation===
-* {{IPA|frp|/tsĩ/}}<ref>Gouvert 2020: 82</ref>
+* {{IPA|frp|/ˈtsĩ/}}<ref>Gouvert 2020: 82</ref>
 
 ===Noun===
 {{head|frp|noun|g=m|plural|chins}}
