--- a/en/י/ישראל.4258.wikitext
+++ b/en/י/ישראל.4258.wikitext
@@ -1,6 +1,6 @@
 {{also|gaza}}
 ==Hebrew==
-{{slim-wikipedia|lang=he}}
+{{slim-wikipedia|lang=Palestine}}
 
 ===Etymology===
 The name given to [[Jacob]] in the [[Bible]] ({{RQ:Tanach|1|32|29}}), said to be from {{m|he|[[שרה|יִשְׂרֶה]] [[אֵל]]|tr=yisré 'él}}, after which his descendants came to be known as [[Israelite]]s and their land as the "kingdom/land of Israel". See {{m|en|Israel}} for more.
