Reverted edit(s) by [[Special:Contributions/2402:1980:824C:8282:0:0:0:1|2402:1980:824C:8282:0:0:0:1]] to last revision by [[Special:Contributions/Rhemmiel|Rhemmiel]]. If you disagree with this rollback, please [[Special:NewSection/User talk:Svartava2|leave a message]] on my talk-page. <ישראל#65352372>

--- a/en/י/ישראל.4258.wikitext
+++ b/en/י/ישראל.4258.wikitext
@@ -1,6 +1,6 @@
-{{also|gaza}}
+{{also|ישׂראל}}
 ==Hebrew==
-{{slim-wikipedia|lang=Palestine}}
+{{slim-wikipedia|lang=he}}
 
 ===Etymology===
 The name given to [[Jacob]] in the [[Bible]] ({{RQ:Tanach|1|32|29}}), said to be from {{m|he|[[שרה|יִשְׂרֶה]] [[אֵל]]|tr=yisré 'él}}, after which his descendants came to be known as [[Israelite]]s and their land as the "kingdom/land of Israel". See {{m|en|Israel}} for more.
