--- a/en/י/ישראל.4258.wikitext
+++ b/en/י/ישראל.4258.wikitext
@@ -13,7 +13,7 @@ The name given to [[Jacob]] in the [[Bible]] ({{RQ:Tanach|1|32|29}}), said to be
 * {{a|hbo}} {{IPA|he|/jiɬ.raːˈʔeːl/}} → {{IPAchar|/jis.raːˈʔeːl/}}
 
 ===Proper noun===
-[[File:WP20Symbols Palestine.png|alt=Gaza|thumb|Palestine]]
+[[Image:Flag_of_Israel.svg|thumb|right|דגל ישראל]]
 {{he-proper noun|wv=יִשְׂרָאֵל|g=m|tr=yisra'él}}
 
 # [[Israel]] {{gloss|the alternative name of [[Jacob]]}}
