--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -23,6 +23,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 # Any of several intelligent [[mammalian]] species of the genus ''[[Sus]]'', having [[cloven]] [[hooves]], [[bristle]]s and a [[nose]] adapted for [[digging]]; especially the [[domestication|domesticated]] [[animal]] ''Sus domesticus''.
 #: {{syn|en|Thesaurus:pig}}
 #: {{ux|en|The man kept a pen with two '''pigs''' that he fed everything from carrots to cabbage.}}
+#* {{RQ:Kingsley Westward Ho|volume=II|chapter=How Salvation Yeo Slew the King of the Gubbings|page=113|passage={{...}}and at the back a rambling courtledge of barns and walls, around which '''pigs''' and bare-foot children grunted in loving communion of dirt.}}
 # {{lb|en|specifically}} A young swine, a [[piglet]] {{qualifier|contrasted with a [[hog]], an adult swine}}.
 #* '''2005''' April, ''Live Swine from Canada, Investigation No. 731-TA-1076 (Final), publication 3766, April 2005, U.S. International Trade Commission'' {{ISBN|1457819899}}, page I-9:
 #*: Weanlings grow into feeder '''pigs''', and feeder '''pigs''' grow into slaughter hogs. {{...}} Ultimately the end use for virtually all '''pigs''' and hogs is to be slaughtered for the production of pork and other products.
