t+cy:[[pwdin Nadolig]] t-balance t+ca:[[púding de Nadal]] t+nrf:[[podîn d'Noué]] ([[WT:EDIT|Assisted]]) <Christmas pudding#65363664>

--- a/en/c/Christmas pudding.856125.wikitext
+++ b/en/c/Christmas pudding.856125.wikitext
@@ -9,11 +9,14 @@
 
 ====Translations====
 {{trans-top|rich dessert traditionally eaten at Christmas}}
+* Catalan: {{t|ca|púding de Nadal|m}}
 * Chinese:
 *: Mandarin: {{t|cmn|聖誕布丁|sc=Hani}}, {{t|cmn|圣诞布丁|tr=shèngdàn bùdīng|sc=Hani}}
-{{trans-mid}}
 * Finnish: {{t+|fi|Christmas pudding}}, {{t+|fi|jouluvanukas}}
+{{trans-mid}}
 * Irish: {{t|ga|maróg Nollag|f}}
+* Norman: {{t|nrf|podîn d'Noué|m}} {{qualifier|Jèrriais}}
+* Welsh: {{t|cy|pwdin Nadolig|m}}
 {{trans-bottom}}
 
 [[Category:en:Desserts]]
