--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -32,7 +32,7 @@ Partially displaced native English {{m|ang|onefold}}.
 # {{lb|en|now|rare}} [[trivial|Trivial]]; [[insignificant]].
 #* '''1485''', {{w|Thomas Malory}}, ''{{w|Le Morte d'Arthur}}'', Book X:
 #*: ‘That was a '''symple''' cause,’ seyde Sir Trystram, ‘for to sle a good knyght for seyynge well by his maystir.’
-# {{lb|en|now|colloquial}} Feeble-minded; [[foolish]].
+# {{lb|en|now|colloquial|euphemism}} Feeble-minded; [[foolish]].
 # {{lb|en|heading|technical}} Structurally uncomplicated.
 ## {{lb|en|chemistry|pharmacology}} Consisting of one [[single]] substance; [[uncompounded]].
 ## {{lb|en|mathematics}} Of a group: having no [[normal]] [[subgroup]].
