/* Noun */ missing params <bent#65365513>

--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -293,6 +293,6 @@ From {{der|sco|ang|beonet}}, compare {{cog|enm|bent}}.
 From {{der|tr|fa|بند|tr=band}}.
 
 ===Noun===
-{{tr-noun}}
+{{tr-noun|bendi|bentler}}
 
 # [[dam]]
