--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -432,7 +432,11 @@ From {{inh|de|gmh|rōt||red, red-haired}}, from {{inh|de|goh|rōt||red, scarlet,
 }}
 
 ===Further reading===
+* {{R:DWDS}}
+* {{R:UniLeipzig}}
 * {{R:Duden}}
+* {{R:OpenThesaurus}}
+* {{pedia|lang=de}}
 
 {{C|de|Colors|Colors of the rainbow}}
 
