--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -471,8 +471,8 @@ From {{inh|az|trk-pro|*at|t=horse}}.<ref>{{R:trk-pro:SDM|*ăt|855}}</ref>
 ==Bikol Central==
 
 ===Conjunction===
-{{head|bcl|conjunction}} {{lb|bcl|Daet}} 
-# [[and]]
+{{head|bcl|conjunction}}  
+# {{lb|bcl|Daet}} [[and]]
 #: {{syn|bcl|asin|saka|buda}}
 
 ----
