Spanish: Added forms <gramas#65379634>

--- a/en/g/gramas.855023.wikitext
+++ b/en/g/gramas.855023.wikitext
@@ -57,3 +57,12 @@
 {{head|pt|noun form|g=f}}
 
 # {{plural of|pt|grama}}
+
+----
+
+==Spanish==
+
+===Noun===
+{{head|es|noun form|g=f-p}}
+
+# {{noun form of|es|grama||p}}
