--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -75,7 +75,7 @@ From {{inh|en|enm|furet}}, {{m|enm|ferret}}, from {{der|en|fro|furet}}, from {{d
 * Occitan: {{t+|oc|fura}}
 * Persian: {{t+|fa|راسو|tr=râsu}}, {{t+check|fa|قاقم|tr=qâqom}} <!--ermine or stoat, not ferret? -->
 * Plautdietsch: {{t|pdt|Elkj|f}}
-* Polish: {{t+|pl|fretka|f}}, {{t+|pl|tchórz|m}}
+* Polish: {{t+|pl|fretka|f}}
 * Portuguese: {{t+|pt|furão|m}}
 * Quechua: {{t|qu|manqu}}
 * Romagnol: {{t|rgn|furèt|m}}
