--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -75,6 +75,7 @@ From 16th-century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bæt
 * Dutch: {{t+|nl|waarschijnlijkheid|f}}
 * Finnish: {{t+|fi|mahdollisuus}}
 {{trans-mid}}
+* German: {{t+|de|Wahrscheinlichkeit|f}}
 * Portuguese: {{t+|pt|aposta|f}}
 {{trans-bottom}}
 
