--- a/en/l/Las Vegas.741384.wikitext
+++ b/en/l/Las Vegas.741384.wikitext
@@ -31,9 +31,10 @@ From {{bor|en|es|[[las]] [[vega|vegas]]||the fertile meadows}}.
 * Esperanto: {{t|eo|Lasvegaso}}
 * German: {{t+|de|Las Vegas|n}}
 * Greek: {{t+|el|Λας Βέγκας|n}}
-{{trans-mid}}
 * Japanese: {{t|ja|ラスベガス|tr=Rasubegasu}}
+{{trans-mid}}
 * Korean: {{t|ko|^라스베이거스}}
+* Latin: {{t|la|Campi}}
 * Marathi: {{t|mr|लास व्हेगस|n}}
 * Navajo: {{t|nv|Naʼazhǫǫsh Hatsoh}}
 * Polish: {{t+|pl|Las Vegas|n}}
