t+csb:[[swinia]] ([[WT:EDIT|Assisted]]) <pig#65399679>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -231,6 +231,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Kalmyk: {{t|xal|һаха}}
 * Kannada: {{tt+|kn|ಹಂದಿ}}
 * Karelian: {{tt|krl|počči}}
+* Kashubian: {{t|csb|swinia}}
 * Kazakh: {{tt+|kk|шошқа}}
 * Khamti: {{t-needed|kht}}
 * Khasi: {{tt|kha|sniang}}
