--- a/en/a/abandonar.4113.wikitext
+++ b/en/a/abandonar.4113.wikitext
@@ -199,9 +199,9 @@ From {{bor|es|fr|abandonner}}, from {{der|es|gem-pro|*bannaną}}.
 ===Verb===
 {{es-verb}}
 
-# to [[abandon]], to [[leave]]
+# {{lb|es|transitive}} to [[abandon]], to [[leave]]
 #: {{uxi|es|La '''abandonó''' por otra mujer.|He abandoned her for another woman.}}
-# to [[neglect]]
+# {{lb|es|transitive}} to [[neglect]]
 #: {{syn|es|descuidar}}
 
 ====Conjugation====
