/* Derived terms */ +1 <Nintendo#65412181>

--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -52,6 +52,7 @@ From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japan
 ====Derived terms====
 * {{l|en|Nintendinitis}}
 * {{l|en|Nintendocore}}
+* {{l|en|Nintendo hard}}
 * {{l|en|Nintendo thumb}}
 * {{l|en|Nintendrone}}
 
