Spanish: Added DRAE link (bot edit) <barbera#65412872>

--- a/en/b/barbera.745859.wikitext
+++ b/en/b/barbera.745859.wikitext
@@ -88,6 +88,9 @@ From {{af|nn|barber|-a}}.
 # [[razor]], [[cutthroat razor]]
 #: {{syn|es|navaja barbera}}
 
+===Further reading===
+* {{R:DRAE}}
+
 ----
 
 ==Swedish==
