--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -176,7 +176,7 @@ Borrowed from {{bor|io|fr|qui}}, {{m|fr|que}}, {{bor|io|it|che}}, {{bor|io|es|qu
 * {{alter|it|quà||misspelling}}
 
 ===Etymology===
-From {{inh|it|VL.||*(ec)cu hac}}, from {{inh|it|la|eccum}} + {{m|la|hac}}. Cognate with {{cog|pt|cá}}, {{cog|es|acá}}, {{cog|fr|çà}}.
+From {{inh|it|VL.|*eccum hāc}}. Related to {{cog|pt|cá}}, {{cog|es|acá}}, {{cog|fr|çà}}.
 
 ===Pronunciation===
 {{it-pr|quà*<rhyme:a<s:1>><audio:It-qua.ogg>}}
