--- a/en/m/mini.34065.wikitext
+++ b/en/m/mini.34065.wikitext
@@ -100,7 +100,7 @@ From {{inh|rup|la|mē}}, possibly through {{inh|rup|VL.||mēne|pos=a root}}, or 
 * {{l|dak|mni}} (Yankton)
 
 ===Etymology===
-From {{inh|dak|sio-pro|*wirį́||water}}.
+From {{inh|dak|sio-pro|*warį́||water}}.
 
 ===Noun===
 {{head|dak|noun}}
