--- a/en/u/unhealthiness.742234.wikitext
+++ b/en/u/unhealthiness.742234.wikitext
@@ -15,10 +15,11 @@ From {{af|en|unhealthy|-ness}}.
 ====Translations====
 {{trans-top|the state of being unhealthy}}
 * Finnish: {{t+|fi|epäterveellisyys}}
+* German: {{t|de|Ungesundheit|f}}
 * Greek: {{t+|el|ανθυγιεινότητα|f}}
 * Irish: {{t|ga|mífholláine|f}} {{qualifier|climate}}, {{t|ga|easláinte|f}} {{qualifier|person}}
-* Italian: {{t+|it|insalubrità|f}}
 {{trans-mid}}
+* Italian: {{t+|it|insalubrità|f}}
 * Manx: {{t|gv|meefollanid|m}} {{qualifier|climate}}, {{t|gv|aslaynt|f}} {{qualifier|person}}, {{t|gv|neuslayntoilid|m}} {{qualifier|person}}
 * Russian: {{t+|ru|боле́зненность|f}}, {{t+|ru|вре́дность|f}}, {{t+|ru|нездоро́вье|n}}
 * Telugu: {{t+|te|అనారోగ్యము}}
