--- a/en/p/patrilateral.746570.wikitext
+++ b/en/p/patrilateral.746570.wikitext
@@ -12,7 +12,7 @@
 ===Adjective===
 {{en-adj}}
 
-# From kin 'on the [[father]]'s side' (related to the father).
+# {{lb|en|anthropology}} From kin 'on the [[father]]'s side' (related to the father).
 #: ''Jim's blond hair is one of his '''patrilateral''' traits.''
 
 ====Antonyms====
