/* Translations */Spanish translation <jump to conclusions#65531302>

--- a/en/j/jump to conclusions.742285.wikitext
+++ b/en/j/jump to conclusions.742285.wikitext
@@ -19,4 +19,5 @@
 * German: {{t|de|[[voreilig]]e [[Schluss|Schlüsse]] [[ziehen]]}}
 * Irish: {{t|ga|dóigh a dhéanamh de do bharúil}}
 * Italian: {{t|it|saltare alle conclusioni}}
+* Spanish: {{t|es|sacar conclusiones precipitadas}}
 {{trans-bottom}}
