--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -92,3 +92,4 @@ From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japan
 
 [[Category:English trademarks]]
 [[Category:en:Nintendo]]
+[[Category:en:Organizations]]
