--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -338,8 +338,8 @@ From {{inh|non|gem-pro|*meganą}}, {{m|gem-pro|*maganą}}.
 * {{desc|fo|mega}}
 * {{desc|nn|[[moga]], (dialectal) [[mågå]], [[måga|måga]], [[moge|mòge]]}}
 * {{desctree|gmq-osw|magha}}
-* {{desctree|non|[[mátti]] {{q|past tense}}|der=1}}
-* {{desctree|non|[[má]] {{q|present tense}}|der=1}}
+* {{desctree|non|mátti|der=1}}
+* {{desctree|non|má|der=1}}
 
 ===References===
 * {{R:Zoega}}
