/* Prepositional phrase */ quote <in the know#65551656>

--- a/en/i/in the know.742284.wikitext
+++ b/en/i/in the know.742284.wikitext
@@ -10,6 +10,7 @@
 #: {{ux|en|Those '''in the know''' don't shop at that kind of store.}}
 #: {{ux|en|Anyone who is '''in the know''' doesn't shop there.}}
 #: {{ux|en|He appears to be '''in the know''' about such matters.}}
+#* {{quote-journal|en|date=2022 January 12|title=Stop & Examine|journal=RAIL|issue=948|page=70|text="Reet. Wot fort do? I'm off wom.". No, we're not speaking a foreign language, although the bulk of readers could be forgiven for thinking so. Rather, for those '''in the know''', it is of course a typical example of 'Wiganese' dialect, which has been brought to life by an Avanti West Coast-funded mural in the underpass of Wigan North Western station.}}
 
 ====Antonyms====
 * {{l|en|in the dark}}
