--- a/en/m/mind-numbing.775549.wikitext
+++ b/en/m/mind-numbing.775549.wikitext
@@ -20,6 +20,7 @@
 * Finnish: {{t+|fi|turruttava}}
 {{trans-mid}}
 * French: {{t+|fr|abrutissant}}
+* Polish: {{t+|pl|arcynudny}}
 * Russian: {{t+|ru|отупля́ющий}}
 * Swedish: {{t|sv|förslöande}}
 {{trans-bottom}}
