t+tr:[[yine de]] ([[WT:EDIT|Assisted]]) <even so#65566383>

--- a/en/e/even so.742278.wikitext
+++ b/en/e/even so.742278.wikitext
@@ -47,6 +47,7 @@
 * Spanish: {{t+|es|aún así}}
 * Swedish: {{t+|sv|likväl}}, {{t+|sv|ändå}}, {{t+|sv|i alla fall}}, {{t|sv|trots det}}
 * Tagalog: {{t+|tl|kahit}}
+* Turkish: {{t|tr|yine de}}
 {{trans-bottom}}
 
 ===Anagrams===
