--- a/en/m/mini.34065.wikitext
+++ b/en/m/mini.34065.wikitext
@@ -24,9 +24,9 @@ Abbrevations.
 ====Noun====
 {{en-noun}}
 
-# A [[miniskirt]].
+# ''Clipped form of'' [[miniskirt]].
 #* {{quote-book|en|year=2010|author=Donna Freitas|title=The Possibilities of Sainthood|passage=All Normal Catholic Schoolgirls had creative ways of sluttifying our pure-as-the-driven-snow required attire. {{...}} Most important is rolling your skirt so that it is a virtual '''mini''' {{...}}}}
-# {{lb|en|dated}} A [[minicomputer]].
+# {{lb|en|dated}} ''Clipped form of'' [[minicomputer]].
 #* '''1975''', June 25, ''Computerworld'' (page 20)
 #*: Micros will move upwards to where they have the same power and speed as today's '''minis'''.
 
