t+fr:[[recalcul]] t-balance ([[WT:EDIT|Assisted]]) <recalculation#65583795>

--- a/en/r/recalculation.741532.wikitext
+++ b/en/r/recalculation.741532.wikitext
@@ -10,6 +10,7 @@
 
 ====Translations====
 {{trans-top|act of recalculating}}
-* Portuguese: {{t|pt|recálculo|m}}
+* French: {{t+|fr|recalcul|m}}
 {{trans-mid}}
+* Portuguese: {{t|pt|recálculo|m}}
 {{trans-bottom}}
