--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -169,14 +169,16 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 * Kashubian: {{t|csb|młin|m}}
 * Kazakh: {{t+|kk|диірмен|sc=Cyrl}}
 * Khakas: {{t|kjh|тербен}}
+* Khmer: {{t|km|ម៉ាស៊ីនកិនស្រូវ}} {{qualifier|rice mill}}
 * Korean: {{t+|ko|방아}}
 * Kurdish:
 *: Central Kurdish: {{t+|ckb|ئاش}}
 *: Northern Kurdish: {{t+|kmr|aş|m}}
-{{trans-mid}}
 * Kyrgyz: {{t+|ky|тегирмен|sc=Cyrl}}
 * Lak: {{t|lbe|гьарахъалу}}
+{{trans-mid}}
 * Lakota: {{t|lkt|onákpaŋ}}
+* Lao: {{t|lo|ໂຮງສີ}} {{qualifier|rice mill}}
 * Latin: {{t|la|mola}}
 * Latvian: {{t|lv|malējs}}
 * Lezgi: {{t|lez|регьв}}
@@ -224,12 +226,14 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 * Tajik: {{t|tg|осиё|sc=Cyrl}}, {{t|tg|осиёб|sc=Cyrl}}
 * Tatar: {{t+|tt|тегермән|sc=Cyrl}}
 * Telugu: {{t+|te|గానుగ}}
+* Thai: {{t|th|โรงสี}} {{qualifier|rice mill}}
 * Torwali: {{t|trw|ژان|tr=žān}}
 * Tswana: {{t|tn|tshilô|c9}}
 * Turkish: {{t+|tr|değirmen}}
 * Turkmen: {{t|tk|degirmen}}
 * Udmurt: {{t|udm|вуко}}
 * Ukrainian: {{t|uk|млин|m}}
+* Urdu: {{t|ur|چَکّی|f|tr=cakkī}}
 * Uyghur: {{t|ug|تۈگمەن}}
 * Uzbek: {{t+|uz|tegirmon}}
 * Venetian: {{t|vec|molin|m}}, {{t|vec|mulin|m}}, {{t|vec|mułin|m}}
