t+my:[[{{t-needed}}]] t+bn:[[{{t-needed}}]] t-balance t+yi:[[מיל]] ([[WT:EDIT|Assisted]]) <mill#65591504>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -123,8 +123,10 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 * Bashkir: {{t|ba|тирмән|sc=Cyrl}}
 * Basque: {{t+|eu|errota}}, {{t+|eu|eihera}}
 * Belarusian: {{t|be|млын|m}}
+* Bengali: {{t-needed|bn}}
 * Breton: {{t+|br|milin|f}}
 * Bulgarian: {{t+|bg|ме́лница|f}}
+* Burmese: {{t-needed|my}}
 * Buryat: {{t|bua|тээрмэ}}
 * Catalan: {{t+|ca|molí|m}}
 * Chechen: {{t|ce|хьера}}
@@ -175,8 +177,8 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 *: Central Kurdish: {{t+|ckb|ئاش}}
 *: Northern Kurdish: {{t+|kmr|aş|m}}
 * Kyrgyz: {{t+|ky|тегирмен|sc=Cyrl}}
-* Lak: {{t|lbe|гьарахъалу}}
 {{trans-mid}}
+* Lak: {{t|lbe|гьарахъалу}}
 * Lakota: {{t|lkt|onákpaŋ}}
 * Lao: {{t|lo|ໂຮງສີ}} {{qualifier|rice mill}}
 * Latin: {{t|la|mola}}
@@ -244,6 +246,7 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 * Welsh: {{t|cy|melin|f}}
 * West Frisian: {{t|fy|mûne|c}}
 * Yakut: {{t|sah|миэлиҥсэ}}
+* Yiddish: {{t|yi|מיל|f}}
 * Zazaki: {{t+|zza|arye}}
 {{trans-bottom}}
 
