--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -167,12 +167,12 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 * Irish: {{t|ga|muileann|m}}
 * Italian: {{t+|it|mulino|m}}, {{t+|it|macinatoio|m}}, {{t+|it|mola|f}}, {{t+|it|macina|f}}
 * Jamtish: {{t|gmq-jmk|kvæðn|f}}
-* Japanese: {{t|ja|粉砕機|tr=ふんさいき, funsaiki}}, {{t|ja|ミル|tr=miru}}
+* Japanese: {{t|ja|粉砕機|tr=ふんさいき, funsaiki}}, {{t|ja|ミル|tr=miru}}, {{t|ja|製粉所|tr=せいふんじょ, seifunjo}}
 * Kashubian: {{t|csb|młin|m}}
 * Kazakh: {{t+|kk|диірмен|sc=Cyrl}}
 * Khakas: {{t|kjh|тербен}}
 * Khmer: {{t|km|ម៉ាស៊ីនកិនស្រូវ}} {{qualifier|rice mill}}
-* Korean: {{t+|ko|방아}}, {{t+|ko|방앗간}}
+* Korean: {{t+|ko|방아}}, {{t+|ko|방앗간}}, {{t|ko|제분소(製粉所)}}
 * Kurdish:
 *: Central Kurdish: {{t+|ckb|ئاش}}
 *: Northern Kurdish: {{t+|kmr|aş|m}}
