/* Bikol Central */ <barbera#65592502>

--- a/en/b/barbera.745859.wikitext
+++ b/en/b/barbera.745859.wikitext
@@ -30,6 +30,7 @@ Borrowed from {{bor|bcl|es|barbera}}
 
 # {{female equivalent of|es|barbero|t=barber}}
 #: {{syn|bcl|paratusar}}
+[[Category:bcl:Occupations]]
 ----
 
 ==French==
