added Romanian definition <staff#65603046>

--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -378,6 +378,20 @@ Borrowed from {{bor|it|en|staff}}.
 
 ----
 
+==Romanian==
+
+===Etymology===
+{{ubor|ro|en|staff}}.
+
+===Noun===
+{{ro-noun|n|staffuri}}
+
+# {{l|en|staff}}
+
+====Declension====
+{{ro-noun-n-uri}}
+----
+
 ==Spanish==
 
 ===Etymology===
