--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -202,6 +202,7 @@ Sense of "group of military officers that assists a commander" and similar meani
 * Lao: {{t|lo|ພະນັກງານ}}
 * Macedonian: {{t|mk|персона́л|m}}, {{t|mk|кадар|m}}
 * Malay: {{t|ms|kakitangan}}
+* Malayalam: {{t+|ml|ജീവനക്കാരൻ|m}}
 * Maori: {{t|mi|kaimahi}} {{qualifier|Preceded by the article ‘ngā’ to make the term plural.}}
 * Mongolian: {{t-needed|mn}}
 * Norwegian: {{t|no|personale}}
