/* Conjunction */  (using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]]) <again#65626612>

--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -309,4 +309,4 @@ From {{der|sco|ang|onġēan}}.
 ===Conjunction===
 {{head|sco|conjunction}}
 
-# in preparation for, in advance of
+# In [[preparation]] for, in [[advance]] of
