/* Pronunciation */  (using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]]) <again#65626624>

--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -293,6 +293,7 @@ From {{der|sco|ang|onġēan}}. For aphetic forms see {{m|sco|gin}}.
 
 ===Pronunciation===
 * {{IPA|sco|/əˈɡen/|/əˈɡɛn/|/əˈɡɪn/}}
+* {{a|Southern}} {{IPA|sco|/əˈgɪən/}}
 
 ===Adverb===
 {{head|sco|adverb}}
