--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -289,7 +289,7 @@ From {{inh|en|enm|agayn}}, {{m|enm|again}}, {{m|enm|ayain}}, {{m|enm|ayen}}, {{m
 * {{alter|sco|agen|agin|agane|agayne|agean}}
 
 ===Etymology===
-From {{der|sco|ang|onġēan}}. For aphetic forms see {{m|sco|gin}}.
+From {{inh|sco|enm|agayn}}, {{m|enm|again}}, {{m|enm|ayain}}, {{m|enm|ayen}}, {{m|enm|anȝen}}, from {{inh|sco|ang|āġēan}}, {{m|ang|onġēan}}, {{m|ang|onġeġn||towards, against, opposite to, contrary to, against, in exchange for, opposite, back, again, anew, also}}.
 
 ===Pronunciation===
 * {{IPA|sco|/əˈɡen/|/əˈɡɛn/|/əˈɡɪn/}}
