--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -287,6 +287,7 @@ From {{inh|en|enm|agayn}}, {{m|enm|again}}, {{m|enm|ayain}}, {{m|enm|ayen}}, {{m
 
 ===Alternative forms===
 * {{alter|sco|agen|agin|agane|agayne|agean}}
+* {{alter|sco|agean}}
 
 ===Etymology===
 From {{inh|sco|enm|agayn}}, {{m|enm|again}}, {{m|enm|ayain}}, {{m|enm|ayen}}, {{m|enm|anȝen}}, from {{inh|sco|ang|āġēan}}, {{m|ang|onġēan}}, {{m|ang|onġeġn||towards, against, opposite to, contrary to, against, in exchange for, opposite, back, again, anew, also}}.
