/* Alternative forms */  (using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]]) <again#65626652>

--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -286,8 +286,8 @@ From {{inh|en|enm|agayn}}, {{m|enm|again}}, {{m|enm|ayain}}, {{m|enm|ayen}}, {{m
 ==Scots==
 
 ===Alternative forms===
-* {{alter|sco|agen|agin|agane|agayne|agean}}
-* {{alter|sco|agean}}
+* {{alter|sco|agen|agin|agane|agayne}}
+* {{alter|sco|agean||Southern}}
 
 ===Etymology===
 From {{inh|sco|enm|agayn}}, {{m|enm|again}}, {{m|enm|ayain}}, {{m|enm|ayen}}, {{m|enm|anȝen}}, from {{inh|sco|ang|āġēan}}, {{m|ang|onġēan}}, {{m|ang|onġeġn||towards, against, opposite to, contrary to, against, in exchange for, opposite, back, again, anew, also}}.
