--- a/en/m/multimillion.34080.wikitext
+++ b/en/m/multimillion.34080.wikitext
@@ -27,13 +27,13 @@ From {{prefix|en|multi|million}}.
 * Finnish: {{t|fi|monimiljoonainen}}
 * French: {{t+|fr|multimillionnaire|m|f}}
 * Galician: {{t|gl|multimillonario|m}}, {{t|gl|multimillonaria|f}}
-* German: {{t+|de|millionenschwer }}, {{t|de|millionenteuer}}
+* German: {{t+|de|millionenschwer}}, {{t|de|millionenteuer}}
 * Italian: {{t|it|multimilionario|m}}, {{t|it|multimilionaria|f}}
 {{trans-mid}}
 * Manx: {{t|gv|yl-villioonagh}}
 * Portuguese: {{t+|pt|multimilionário|m}}, {{t|pt|multimilionária|f}}
 * Russian: {{t+|ru|многомиллио́нный}}
-* Spanish: {{t+|es|multimillonario|m}}, {{t|es|multimillonaria|f}}
+* Spanish: {{t+|es|multimillonario}}
 {{trans-bottom}}
 
 ====See also====
