--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -294,7 +294,7 @@ From {{inh|sco|enm|agayn}}, {{m|enm|again}}, {{m|enm|ayain}}, {{m|enm|ayen}}, {{
 
 ===Pronunciation===
 * {{IPA|sco|/əˈɡen/|/əˈɡɛn/|/əˈɡɪn/}}
-* {{a|Southern}} {{IPA|sco|/əˈgɪən/}}
+* {{a|Southern}} {{IPA|sco|/əˈɡɪən/}}
 
 ===Adverb===
 {{head|sco|adverb}}
