--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -89,6 +89,15 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 #* '''1914''', Eugene Gladstone O'Neill, ''[https://web.archive.org/web/20101122050843/http://eoneill.com/texts/movie/contents.htm The Movie Man]'' [playscript]:
 #*: ''Don’t forget to have Gomez postpone that shooting '''thing'''.'' {{qualifier|in reference to the execution of Fernandez}}
 # {{lb|en|informal}} That which is favoured; personal [[preference]]. ({{non-gloss definition|Used in possessive constructions.}})
+#: {{ux|en|it's not really my '''thing'''}}
+#* '''2002''', {{w|Joss Whedon}} ''et al'', "Never Leave Me", ''{{w|Buffy the Vampire Slayer}}'' (TV episode):
+#*: {{ux|en|Tool talk [is] not my thing.}}
+#* '''2006''', {{w|Corbin Bleu}}, interview with ''{{w|Tigerbeat}}'' magazine:
+#*: {{ux|en|The Internet isn't my '''thing'''. I so much rather talk on the phone.}}
+# {{lb|en|informal, with '''do'''}} One's typical routine, habits, or [[manner]]. ({{non-gloss definition|Used in possessive constructions.}})
+#: {{ux|en|let me do my '''thing''';&nbsp; I'm here doing my '''thing'''}}
+#* '''2006''', {{w|David Lynch}}, ''Catching the Big Fish'', Tarcher 2006, "Darkness", p. 91:
+#*: But I'm just a guy from Missoula, Montana, doing my '''thing''', going down the road like everybody else.
 # {{lb|en|chiefly|historical}} A public [[assembly]] or [[judicial]] [[council]] in a [[Germanic]] country.
 #* '''1974''', Jón Jóhannesson, ''A History of the Old Icelandic Commonwealth: Íslendinga Saga'', translated by Haraldur Bessason, page 46:
 #*: In accordance with Old Germanic custom men came to the '''''thing''''' fully armed, [...]
