--- a/en/d/doncella.803303.wikitext
+++ b/en/d/doncella.803303.wikitext
@@ -17,7 +17,7 @@ Borrowed from {{bor|en|es|doncella||maid}}. {{doublet|en|damsel|demoiselle|donze
 ==Spanish==
 
 ===Etymology===
-From a {{inh|es|VL.|*domnicella}} (compare {{cog|pro|donçela}}, {{cog|pt|donzela}}, {{cog|fr|demoiselle}}), based on {{inh|es|la|domina||lady, mistress}}. {{doublet|es|damisela}}.
+From a {{inh|es|VL.|*domnicilla}} (compare {{cog|pro|donçela}}, {{cog|pt|donzela}}, {{cog|fr|demoiselle}}), based on {{inh|es|la|domina||lady, mistress}}. {{doublet|es|damisela}}.
 
 ===Pronunciation===
 {{es-IPA}}
