Spanish: Replaced verb forms <togue#65647286>

--- a/en/t/togue.855176.wikitext
+++ b/en/t/togue.855176.wikitext
@@ -32,6 +32,7 @@ Via {{der|en|fr-CA|-}} from an {{der|en|alg|-}} word.
 ===Verb===
 {{head|es|verb form}}
 
-# {{es-verb form of|togarse|ending=-ar|mood=subjunctive|tense=present|number=s|person=1}}
-# {{es-verb form of|togarse|ending=-ar|mood=subjunctive|tense=present|number=s|person=2|formal=y}}
-# {{es-verb form of|togarse|ending=-ar|mood=subjunctive|tense=present|number=s|person=3}}
+# {{es-verb form of|mood=imperative|sense=negative|formal=y|person=2|number=s|ending=ar|togarse}}
+# {{es-verb form of|mood=subjunctive|tense=present|person=1|number=s|ending=ar|togarse}}
+# {{es-verb form of|mood=subjunctive|tense=present|formal=y|person=2|number=s|ending=ar|togarse}}
+# {{es-verb form of|mood=subjunctive|tense=present|person=3|number=s|ending=ar|togarse}}
