--- a/en/n/nove.26046.wikitext
+++ b/en/n/nove.26046.wikitext
@@ -9,7 +9,7 @@
 From {{inh|co|la|novem}}, from {{inh|co|itc-pro|*nowem}}, from {{inh|co|ine-pro|*h₁néwn̥}}. Cognates include {{cog|it|nove}} and {{cog|pt|nove}}.
 
 ===Pronunciation===
-* {{IPA|co|/ˈnɔve/}}
+* {{IPA|co|/ˈnɔ.wɛ/}}
 * {{hyph|co|no|ve}}
 
 ===Numeral===
