--- a/en/q/quadrant.4317.wikitext
+++ b/en/q/quadrant.4317.wikitext
@@ -55,6 +55,7 @@ Borrowed from {{bor|en|la|quadrantem}}, accusative singular of {{m|la|quadrāns|
 * Japanese: {{t|ja|象限|tr=shōgen|sc=Jpan}}
 * Korean: {{t+|ko|사분면}}
 * Norwegian: {{t|no|kvadrant|m}}
+* Polish: {{t|pl|kwadrant|m}}
 * Portuguese: {{t+|pt|quadrante|m}}
 * Russian: {{t+|ru|квадра́нт|m}}
 * Swedish: {{t|sv|kvadrant|c}}
@@ -87,6 +88,7 @@ Borrowed from {{bor|en|la|quadrantem}}, accusative singular of {{m|la|quadrāns|
 {{trans-mid}}
 * German: {{t+|de|Quadrant|m}}
 * Hungarian: {{t+|hu|kvadráns}}
+* Polish: {{t|pl|kwadrant|m}}
 * Portuguese: {{t+|pt|quadrante|m}}
 * Russian: {{t+|ru|квадра́нт|m}}
 {{trans-bottom}}
