--- a/en/o/onesie.741289.wikitext
+++ b/en/o/onesie.741289.wikitext
@@ -29,7 +29,7 @@ From the {{w|Gerber}} Childrenswear brand name {{w|Onesies}}. The name became [[
 * French: {{t+|fr|body|m}}
 * German: {{t+|de|Strampler|m}}
 {{trans-mid}}
-* Italian: {{t|it|pagliaccetto|m}}
+* Italian: {{t|it|pagliaccetto|m}} body
 * Korean: {{t|ko|바디슈트|sc=Kore}}
 * Romanian: {{t|ro|body}}
 * Russian: {{t|ru|[[детский]] [[комбинезон]]}}, ''(specifically for a baby to sleep in)'' {{t+|ru|слип|m}}
