--- a/en/f/four score and seven years ago.803552.wikitext
+++ b/en/f/four score and seven years ago.803552.wikitext
@@ -2,7 +2,7 @@
 {{was wotd|2021|November|19}}
 
 ===Etymology===
-From {{m|en|four}} + {{m|en|score|t=grouping of 20}} + {{m|en|and}} + {{m|en|seven}} + {{m|en|years}} + {{m|en|ago}}, literally “87 years ago”, the beginning of the {{w|Gettysburg Address}} made on November 19, 1863, by [[w:President of the United States|United States President]] {{w|Abraham Lincoln}} (1809–1865).<ref>{{cite-book|author=Abraham Lincoln|authorlink=Abraham Lincoln|title=[[s:Gettysburg Address (Nicolay draft)|Dedicatory Remarks]]|series={{w|Gettysburg Address}}, [[w:Gettysburg Address#Nicolay copy|Nicolay draft]]|date=19 November 1863|passage='''Four score and seven years ago''' our fathers brought forth, upon this continent, a new nation, conceived in liberty, and dedicated to the proposition that ‘all men are created equal’{{sic}}}}</ref> Widespread familiarity with Lincoln’s address, along with the unusual and poetic wording of its opening line, has earned the phrase a permanent place in the American public consciousness.
+From {{m|en|four}} + {{m|en|score|t=grouping of 20}} + {{m|en|and}} + {{m|en|seven}} + {{m|en|years}} + {{m|en|ago}}, literally “87 years ago”, the beginning of the {{w|Gettysburg Address}} made on November 19, 1863, by [[w:President of the United States|United States President]] {{w|Abraham Lincoln}} (1809–1865).<ref>{{cite-book|author=Abraham Lincoln|authorlink=Abraham Lincoln|title=[[s:Gettysburg Address (Nicolay draft)|Dedicatory Remarks]]|series={{w|Gettysburg Address}}, [[w:Gettysburg Address#Nicolay copy|Nicolay draft]]|date=19 November 1863|passage='''Four score and seven years ago''' our fathers brought forth, upon this continent, a new nation, conceived in liberty, and dedicated to the proposition that ‘all men are created equal’{{sic}}}}</ref> The widespread familiarity of Lincoln’s address, the unusual and poetic wording, and its status as the first words of the speech have caused the phrase to enter the public consciousness.
 
 ===Pronunciation===
 * {{a|RP}} {{IPA|en|/ˈfɔː skɔː‿ɹən ˌsɛvən jɪəz əˌɡəʊ/}}
