--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -124,7 +124,7 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 * Burmese: {{t+|my|သီအိုရီ}}
 * Catalan: {{t+|ca|teoria|f}}
 * Chinese:
-*: Mandarin: {{t+|cmn|理論|sc=Hani}}, {{t+|cmn|理论|tr=lǐlùn|sc=Hani}}, {{t+|cmn|學說|sc=Hani}}, {{t+|cmn|学说|tr=xuéshuō|sc=Hani}}
+*: Mandarin: {{t+|cmn|理論}}, {{t+|cmn|理论|tr=lǐlùn}}, {{t+|cmn|學說}}, {{t+|cmn|学说|tr=xuéshuō}}
 * Czech: {{t+|cs|teorie|f}}
 * Danish: {{t|da|teori|c}}
 * Dutch: {{t+|nl|theorie}}
@@ -148,8 +148,8 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 * Italian: {{t+|it|teoria|f}}
 * Japanese: {{t+|ja|理論|tr=りろん, riron}}, {{t+|ja|学説|tr=がくせつ, gakusetsu}}
 * Kazakh: {{t+|kk|теория}}
-* Khmer: {{t+|km|ទ្រឹស្ដី|tr=trɨhsdəy|sc=Khmr}}
-* Korean: {{t+|ko|이론}}, {{t+|ko|학설}}, {{t+|ko|리론}} {{qualifier|North Korea}}
+* Khmer: {{t+|km|ទ្រឹស្ដី}}
+* Korean: {{t+|ko|이론(理論)}}, {{t+|ko|리론(理論)}} {{qualifier|North Korea}}, {{t+|ko|학설(學說)}}
 {{trans-mid}}
 * Kyrgyz: {{t+|ky|теория}}
 * Lao: {{t+|lo|ທິດສະດີ}}
@@ -160,18 +160,20 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 * Malayalam: {{t+|ml|സിദ്ധാന്തം}}
 * Maltese: {{t|mt|teorija|f}}
 * Maori: {{t|mi|ariā}}
-* Mongolian: {{t+|mn|онол}}
+* Mongolian:
+*: Cyrillic: {{t+|mn|онол}}
 * Moroccan Amazigh: {{t|zgh|ⵜⵉⵥⵕⵉ|tr=tiẓṛi}}
-* Norwegian: {{t|no|teori|m}}
+* Norwegian:
+*: Bokmål: {{t|nb|teori|m}}
 * Occitan: {{t+|oc|teoria|f}}
 * Pashto: {{t+|ps|نظريه|f|tr=nazaryá}}, {{t+|ps|تيوري|f|tr=tyorí}}
-* Persian: {{t+|fa|نظریه|tr=nazariye|sc=fa-Arab}}, {{t+|fa|تئوری|tr=teori|sc=fa-Arab}}
+* Persian: {{t+|fa|نظریه|tr=nazariye}}, {{t+|fa|تئوری|tr=teori}}
 * Polish: {{t+|pl|teoria|f}}
 * Portuguese: {{t+|pt|teoria|f}}
 * Romanian: {{t+|ro|teorie|f}}
 * Russian: {{t+|ru|тео́рия|f}}
 * Serbo-Croatian:
-*: Cyrillic: {{t|sh|тѐо̄рија|f|sc=Cyrl}}
+*: Cyrillic: {{t|sh|тѐо̄рија|f}}
 *: Roman: {{t+|sh|tèōrija|f}}
 * Slovak: {{t|sk|teória|f}}
 * Slovene: {{t+|sl|teorija|f}}
@@ -196,7 +198,7 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 * Armenian: {{t+|hy|տեսություն}}
 * Catalan: {{t+|ca|teoria|f}}
 * Chinese:
-*: Mandarin: {{t+|cmn|理論|sc=Hani}}, {{t+|cmn|理论|tr=lǐlùn|sc=Hani}}
+*: Mandarin: {{t+|cmn|理論}}, {{t+|cmn|理论|tr=lǐlùn}}
 * Dutch: {{t+|nl|theorie}}
 * Finnish: {{t+|fi|teoria}}
 * French: {{t+|fr|théorie|f}}
@@ -207,19 +209,20 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 * Indonesian: {{t+|id|teori}}
 * Irish: {{t|ga|teoiric|f}}
 * Italian: {{t+|it|teoria|f}}
-* Japanese: {{t+|ja|憶測|tr=おくそく, okusoku}}, {{t+|ja|推測|tr=すいそく, suisoku}}, {{t+|ja|推論|tr=すいろん,suiron}}, {{t+|ja|見解|tr=けんかい, kenkai}}
+* Japanese: {{t+|ja|憶測|tr=おくそく, okusoku}}, {{t+|ja|推測|tr=すいそく, suisoku}}, {{t+|ja|推論|tr=すいろん, suiron}}, {{t+|ja|見解|tr=けんかい, kenkai}}
 * Macedonian: {{t|mk|теорија|f}}
 * Malay: {{t+|ms|teori}}
 {{trans-mid}}
 * Maltese: {{t|mt|teorija|f}}
-* Norwegian: {{t|no|teori|m}}
+* Norwegian:
+*: Bokmål: {{t|nb|teori|m}}
 * Polish: {{t+|pl|teoria|f}}
 * Portuguese: {{t+|pt|teoria|f}}
 * Romanian: {{t+|ro|teorie|f}}
 * Russian: {{t+|ru|тео́рия|f}}, {{t+|ru|гипо́теза|f}}
 * Scottish Gaelic: {{t|gd|beachd-smaoin|f}}
 * Serbo-Croatian:
-*: Cyrillic: {{t|sh|тѐо̄рија|f|sc=Cyrl}}
+*: Cyrillic: {{t|sh|тѐо̄рија|f}}
 *: Roman: {{t+|sh|tèōrija|f}}
 * Spanish: {{t+|es|teoría|f}}
 * Swedish: {{t+|sv|teori|c}}
@@ -233,7 +236,7 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 {{trans-top|a field of study in mathematics}}
 * Catalan: {{t+|ca|teoria|f}}
 * Chinese:
-*: Mandarin: {{t+|cmn|理論|sc=Hani}}, {{t+|cmn|理论|tr=lǐlùn|sc=Hani}}, {{t+|cmn|學說|sc=Hani}}, {{t+|cmn|学说|tr=xuéshuō|sc=Hani}}
+*: Mandarin: {{t+|cmn|理論}}, {{t+|cmn|理论|tr=lǐlùn}}, {{t+|cmn|學說}}, {{t+|cmn|学说|tr=xuéshuō}}
 * Czech: {{t+|cs|teorie|f}}
 * Dutch: {{t+|nl|theorie}}
 * Finnish: {{t+|fi|teoria}}, {{t+|fi|oppi}}
@@ -241,7 +244,7 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 * Galician: {{t|gl|teoría|f}}
 * German: {{t+|de|Theorie|f}}
 * Greek: {{t+|el|θεωρία|f}}
-* Hindi: {{t+|hi|सिद्धान्त}}
+* Hindi: {{t+|hi|सिद्धांत|m}}
 * Indonesian: {{t+|id|teori}}
 * Irish: {{t|ga|teoiric|f}}
 * Italian: {{t+|it|teoria|f}}
@@ -251,13 +254,14 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 * Malay: {{t+|ms|teori}}
 * Maltese: {{t|mt|teorija}}
 * Mongolian: {{t+|mn|онол}}
-* Norwegian: {{t|no|teori|m}}
+* Norwegian:
+*: Bokmål: {{t|nb|teori|m}}
 * Polish: {{t+|pl|teoria|f}}
 * Portuguese: {{t+|pt|teoria|f}}
 * Romanian: {{t+|ro|teorie}}
 * Russian: {{t+|ru|тео́рия|f}}
 * Serbo-Croatian:
-*: Cyrillic: {{t|sh|тѐо̄рија|f|sc=Cyrl}}
+*: Cyrillic: {{t|sh|тѐо̄рија|f}}
 *: Roman: {{t+|sh|tèōrija|f}}
 * Spanish: {{t+|es|teoría|f}}
 * Swedish: {{t+|sv|teori|c}}
@@ -279,13 +283,14 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 * Macedonian: {{t|mk|теорија|f}}
 * Malay: {{t+|ms|teori}}
 {{trans-mid}}
-* Norwegian: {{t|no|teori|m}}
+* Norwegian:
+*: Bokmål: {{t|nb|teori|m}}
 * Polish: {{t+|pl|teoria|f}}
 * Portuguese: {{t+|pt|teoria|f}}
 * Romanian: {{t|ro|teorii|p}}
 * Russian: {{t+|ru|тео́рия|f}}
 * Serbo-Croatian:
-*: Cyrillic: {{t|sh|тѐо̄рија|f|sc=Cyrl}}
+*: Cyrillic: {{t|sh|тѐо̄рија|f}}
 *: Roman: {{t+|sh|tèōrija|f}}
 * Spanish: {{t+|es|teoría|f}}
 * Swedish: {{t+|sv|teori|c}}
