--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -127,7 +127,7 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 *: Mandarin: {{t+|cmn|理論}}, {{t+|cmn|理论|tr=lǐlùn}}, {{t+|cmn|學說}}, {{t+|cmn|学说|tr=xuéshuō}}
 * Czech: {{t+|cs|teorie|f}}
 * Danish: {{t|da|teori|c}}
-* Dutch: {{t+|nl|theorie}}
+* Dutch: {{t+|nl|theorie|f}}
 * Esperanto: {{t|eo|teorio}}
 * Estonian: {{t+|et|teooria}}
 * Finnish: {{t+|fi|teoria}}
@@ -242,7 +242,7 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 *: Mandarin: {{t+|cmn|理論}}, {{t+|cmn|理论|tr=lǐlùn}}, {{t+|cmn|學說}}, {{t+|cmn|学说|tr=xuéshuō}}
 * Czech: {{t+|cs|teorie|f}}
 * Danish: {{t|da|teori|c}}
-* Dutch: {{t+|nl|theorie}}
+* Dutch: {{t+|nl|theorie|f}}
 * Finnish: {{t+|fi|teoria}}, {{t+|fi|oppi}}
 * French: {{t+|fr|théorie|f}}
 * Galician: {{t|gl|teoría|f}}
@@ -277,7 +277,7 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 {{trans-top|in logic: a set of axioms and all statements derivable from them}}
 * Catalan: {{t+|ca|teoria|f}}
 * Czech: {{t+|cs|teorie|f}}
-* Dutch: {{t+|nl|theorie}}
+* Dutch: {{t+|nl|theorie|f}}
 * Finnish: {{t+|fi|teoria}}
 * Galician: {{t|gl|teoría|f}}
 * German: {{t+|de|Theorie|f}}
