--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -201,7 +201,7 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 * Chinese:
 *: Mandarin: {{t+|cmn|理論}}, {{t+|cmn|理论|tr=lǐlùn}}
 * Danish: {{t|da|teori|c}}
-* Dutch: {{t+|nl|theorie}}
+* Dutch: {{t+|nl|theorie|f}}
 * Finnish: {{t+|fi|teoria}}
 * French: {{t+|fr|théorie|f}}
 * Galician: {{t|gl|teoría|f}}
