/* Bikol Central */ <mundo#65778124>

--- a/en/m/mundo.4430.wikitext
+++ b/en/m/mundo.4430.wikitext
@@ -13,7 +13,7 @@ From {{der|an|la|mundus}}.
 
 ==Bikol Central==
 
-===Etymology===
+===Etymology 1===
 Borrowed from {{bor|bcl|es|mundo||world}}.
 
 ===Noun===
@@ -21,6 +21,17 @@ Borrowed from {{bor|bcl|es|mundo||world}}.
 
 # [[world]]; [[earth]]
 
+===Etymology 2===
+
+====Adjective====
+{{head|bcl|adjective|head=mundô}}
+
+# [[sad]]; [[unhappy]]; [[depressed]]; [[sorrowful]]
+
+====Derived terms====
+* [[mamundo]]
+* [[nagmundo]]
+* [[pagkamundo]]
 ----
 
 ==Chavacano==
