--- a/en/g/genet.746610.wikitext
+++ b/en/g/genet.746610.wikitext
@@ -6,7 +6,7 @@
 {{wikispecies|Genetta}}
 
 ===Pronunciation===
-* {{a|UK|US}} {{IPA|en|/ˈdʒɛn.ɪt/}}
+* {{a|UK|US}} {{IPA|en|/ˈdʒɛ.nɪt/}}
 * {{audio|en|en-us-genet.ogg|Audio (US)}}
 * {{rhymes|en|ɛnɪt|s=2}}
 
