--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -257,7 +257,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Limburgish: {{tt+|li|zwien}}, {{tt+|li|verke}}
 * Lithuanian: {{tt+|lt|kiaulė|f}}
 * Livonian: {{tt|liv|sigā}}
-* Lombard: {{t+|lmo|scin}}
+* Lombard: {{t+|lmo|scin}}, {{t|lmo|sì}}
 * Low German: {{tt+|nds|Swien|n}}
 * Ludian: {{tt|lud|šiga}}
 * Luganda: {{tt|lg|embizzi}}
