t+lmo:[[sunì]] ([[WT:EDIT|Assisted]]) <pig#65790564>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -257,7 +257,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Limburgish: {{tt+|li|zwien}}, {{tt+|li|verke}}
 * Lithuanian: {{tt+|lt|kiaulė|f}}
 * Livonian: {{tt|liv|sigā}}
-* Lombard: {{t+|lmo|scin}}, {{t|lmo|sì}}, {{t|lmo|purscèl}}, {{t|lmo|porsèl}}, {{t|lmo|ciù}}, {{t|lmo|cì}}, {{t|lmo|ròi}}, {{t|lmo|nimàl}}
+* Lombard: {{t+|lmo|scin}}, {{t|lmo|sì}}, {{t|lmo|purscèl}}, {{t|lmo|porsèl}}, {{t|lmo|ciù}}, {{t|lmo|cì}}, {{t|lmo|ròi}}, {{t|lmo|nimàl}}, {{t|lmo|sunì}}
 * Low German: {{tt+|nds|Swien|n}}
 * Ludian: {{tt|lud|šiga}}
 * Luganda: {{tt|lg|embizzi}}
