t+lij:[[pòrco]] ([[WT:EDIT|Assisted]]) <pig#65790584>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -254,6 +254,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Latvian: {{tt+|lv|cūka|f}}
 * Ledo Kaili: {{t-check|lew|bavu}}
 * Lezgi: {{t|lez|вак}}
+* Ligurian: {{t|lij|pòrco}}
 * Limburgish: {{tt+|li|zwien}}, {{tt+|li|verke}}
 * Lithuanian: {{tt+|lt|kiaulė|f}}
 * Livonian: {{tt|liv|sigā}}
