--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -357,7 +357,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 *: Roman: {{tt+|sh|svínja|f}}
 * Shan: {{tt+|shn|မူ}}
 * Sichuan Yi: {{tt|ii|ꃮ}}, {{tt|ii|ꃢ}} {{qualifier|literary}}
-* Sicilian: {{tt+|scn|porcu|m}},  {{tt+|scn|majali|m}}
+* Sicilian: {{tt+|scn|porcu|m}},  {{tt+|scn|majali|m}}, {{t+|scn|verru}}
 * Sinhalese: {{tt+|si|ඌරා}}
 * Slovak: {{tt+|sk|prasa|n}}, {{tt+|sk|sviňa|f}}
 * Slovene: {{tt+|sl|svinja|f}}, {{tt+|sl|prašič|m}}, {{tt|sl|pujs|m}}
