t+egl:[[ninèṅ]] ([[WT:EDIT|Assisted]]) <pig#65790636>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -177,7 +177,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Eastern Cham: {{tt|cjm|ꨚꨝꨶꨬ|tr=pabwei}}, {{tt|cjm|ꨂꩆ|tr=un}}
 * Eastern Mari: {{tt|chm|сӧсна}}
 * Egyptian: {{t-egy|rrj|h=r:*r-i-E12}}
-* Emilian: {{t|egl|nimêl}}, {{t|egl|ninèin}}
+* Emilian: {{t|egl|nimêl}}, {{t|egl|ninèin}}, {{t|egl|ninèṅ}}
 * Erzya: {{tt|myv|туво}}
 * Ese: {{tt|mcq|maha}}
 * Esperanto: {{qualifier|♂♀}} {{tt+|eo|porko}}, {{qualifier|♂}} {{tt|eo|virporko}}, {{qualifier|neologism, ♂}} {{tt|eo|porkiĉo}}, {{qualifier|♀}} {{tt|eo|porkino}}
