t+an:[[tocín]] ([[WT:EDIT|Assisted]]) <pig#65790675>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -114,7 +114,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 *: Gulf Arabic: {{tt|afb|خنزير|m|tr=ḵanzīr}}
 *: Moroccan Arabic: {{tt|ary|حلوف|tr=ḥallūf}}, {{tt|ary|خنزير|tr=ḵanzīr}}
 *: North Levantine Arabic: {{tt|apc|خنزير|m|tr=ḵanzīr}}
-* Aragonese: {{t|an|cochín}}
+* Aragonese: {{t|an|cochín}}, {{t|an|tocín}}
 * Aramaic:
 *: Hebrew: {{tt|arc|חזירא|tr=ħzīrā’|m}}, {{tt|arc|חזירתא|tr=ħzīrtā’|f}}
 *: Syriac: {{tt|arc|ܚܙܝܪܐ|tr=ħzīrā’|m}}, {{tt|arc|ܚܙܝܪܬܐ|tr=ħzīrtā’|f}}
