--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -272,6 +272,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Russian: {{t+|ru|вещь|f}}, {{t+|ru|не́что|n}}, {{t+|ru|предме́т|m}}
 * Rwanda-Rundi: {{t|rw|ikintu|c7|c8}}
 * Sanskrit: {{t+|sa|वस्तु|m}}
+* Scots: {{t|sco|hing}}
 * Scottish Gaelic: {{t|gd|rud|m}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|ствар|f}}
