--- a/en/e/estadounidense.4303.wikitext
+++ b/en/e/estadounidense.4303.wikitext
@@ -46,7 +46,7 @@
 ===Adjective===
 {{es-adj}}
 
-# of the [[United States]] of America; [[US-American]], [[Usonian]]
+# of the [[United States]] of America; [[US-American]], [[U.S. American]]
 
 ====Derived terms====
 {{col3|es
