--- a/en/e/embay.802830.wikitext
+++ b/en/e/embay.802830.wikitext
@@ -7,10 +7,8 @@ From {{prefix|en|en|alt1=em|bay|gloss2=bathe}}.
 {{en-verb}}
 
 # {{lb|en|transitive|obsolete}} To [[bathe]]; to [[steep]].
-#* '''1590''', {{w|Edmund Spenser}}, ''{{w|The Faerie Queen}}'', III.11:
-#*: Sweete Love, that doth his golden wings '''embay''' / In blessed Nectar and pure Pleasures well{{nb...}}.
-#* '''1600''', {{w|Edward Fairfax}}, ''{{w|Jerusalem Delivered}}'' of {{w|Torquato Tasso|Tasso}}, XII, lxii:
-#*: Their swords both points and edges sharp '''embay''' / In purple blood whereso they hit or light.
+#* {{RQ:Spenser Faerie Queene|III|XI|560|Sweete Loue, that doth his golding wings '''embay''' / In bleſſed Nectar, and pure Pleaſures well{{nb...}}.}}
+#* {{RQ:Fairfax Godfrey of Bulloigne|12|stanza=62|225|Their ſwords both points and edges ſharpe '''embay''' / In purple bloud, where ſo they hit or light{{...}}}}
 
 ===Etymology 2===
 From {{prefix|en|en|alt1=em|bay}}.
@@ -22,7 +20,7 @@ From {{prefix|en|en|alt1=em|bay}}.
 {{en-verb}}
 
 # {{lb|en|transitive}} To [[shut in]], [[enclose]], [[shelter]] or [[trap]], such as ships in a [[bay]].
-#* {{quote-book|en|year=1888|author={{w|Thomas Hardy}}|title={{w|Wessex Tales}}| chapter=An Imaginative Woman|passage=Herself the only daughter of a struggling man of letters, she had during the last year or two taken to writing poems, in an endeavour to find a congenial channel in which to let flow her painfully '''embayed''' emotions, whose former limpidity and sparkle seemed departing in the stagnation caused by the routine of a practical household and the gloom of bearing children to a commonplace father.}}
+#* {{RQ:Hardy Life's Little Ironies|year=1912|An Imaginative Woman|7|Herself the only daughter of a struggling man of letters, she had during the last year or two taken to writing poems, in an endeavour to find a congenial channel in which to let flow her painfully '''embayed''' emotions, whose former limpidity and sparkle seemed departing in the stagnation caused by the routine of a practical household and the gloom of bearing children to a commonplace father.}}
 
 ===References===
 * {{R:Webster 1913}}
