Translations: replaced {{ttbc}} with language, replaced {{t}} with {{t-check}} <whistle#65813441>

--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -231,9 +231,9 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 {{checktrans-top}}
 * Burmese: {{t+check|my|ဝီစီ}}
 * Italian: {{t+check|it|fischietto}}, {{t+check|it|fischio}}
-* {{ttbc|ko}}: {{t|ko|호르라기}}
+* Korean: {{t-check|ko|호르라기}}
 {{trans-mid}}
-* {{ttbc|te}}: {{t+|te|ఈల}}, {{t+|te|బూర}}
+* Telugu: {{t+check|te|ఈల}}, {{t+check|te|బూర}}
 {{trans-bottom}}
 
 ===Verb===
