--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -185,7 +185,7 @@ From 16th-century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bæt
 
 {{checktrans-top}}
 * Indonesian: {{t+check|id|taruh|alt=bertaruh}}
-* {{ttbc|lv}}: [[nosaukt]] [[likme|likmi]]
+* Latvian: {{t-check|lv|[[nosaukt]] [[likme|likmi]]}}
 {{trans-mid}}
 * {{ttbc|wuu}}:
 *: Suzhou dialect: [[ruánl tondæ]]
