--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -415,7 +415,7 @@ From {{inh|en|enm|[[then]]([[thenne|ne]])}}, {{m|enm|[[than]]([[thanne|ne]])}}, 
 {{checktrans-top}}
 * Arabic: {{t+check|ar|ثُمَّ}}
 * Hungarian: {{t+check|hu|akkor}}
-* {{ttbc|id}}: [[maka]] ''(if-then)'', [[kemudian]], [[lalu]], [[setelah itu]], [[selanjutnya]], [[berikutnya]]
+* Indonesian: {{t-check|id|maka}} (if-then), {{t-check|id|kemudian}}, {{t-check|id|lalu}}, {{t-check|id|setelah itu}}, {{t-check|id|selanjutnya}}, {{t-check|id|berikutnya}}
 * Italian: {{t+check|it|allora}}
 {{trans-mid}}
 * Korean: {{t+check|ko|그때}}
