--- a/en/f/furball.746671.wikitext
+++ b/en/f/furball.746671.wikitext
@@ -13,6 +13,13 @@
 # {{lb|en|informal}} A particularly [[furry]] person or animal.
 # {{lb|en|military|slang}} A large [[aerial]] [[battle]] consisting of many fighter aircraft.
 
+=====Translations=====
+{{trans-see|coughed up furball|hairball}}
+
+{{trans-top|furry person or animal}}
+{{trans-mid}}
+{{trans-bottom}}
+
 ===See also===
 * [[dogfight]]
 
