t+fr:[[Nord-Africain]] t-balance t+es:[[norteafricano]] ([[WT:EDIT|Assisted]]) <North African#65834309>

--- a/en/n/North African.741821.wikitext
+++ b/en/n/North African.741821.wikitext
@@ -31,9 +31,11 @@
 {{trans-top|native or inhabitant of North Africa}}
 * Bengali: {{t|bn|উত্তর আফ্রিকী}}
 * Dutch: {{t+|nl|Noord-Afrikaan|m}}, {{t+|nl|Noord-Afrikaanse|f}}
+* French: {{t+|fr|Nord-Africain|m}}
 * German: {{t+|de|Nordafrikaner|m}}, {{t+|de|Nordafrikanerin|f}}
-* Ido: nord-Afrikano
 {{trans-mid}}
+* Ido: nord-Afrikano
 * Italian: {{t|it|nordafricano}}
+* Spanish: {{t|es|norteafricano|m}}
 * Turkish: {{t|tr|Kuzey Afrikalı}}
 {{trans-bottom}}
