t+es:[[norteafricano]] ([[WT:EDIT|Assisted]]) <North African#65834388>

--- a/en/n/North African.741821.wikitext
+++ b/en/n/North African.741821.wikitext
@@ -20,6 +20,7 @@
 *: Nynorsk: {{t|nn|nordafrikansk}}
 * Polish: {{t+|pl|północnoafrykański|m}}
 * Romanian: {{t|ro|nord-african}}
+* Spanish: {{t|es|norteafricano|m}}
 {{trans-bottom}}
 
 ===Noun===
