/* Pronunciation */ +en rhymes (using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]]) <behold#65837307>

--- a/en/b/behold.6790.wikitext
+++ b/en/b/behold.6790.wikitext
@@ -7,6 +7,7 @@ From {{inh|en|enm|beholden}}, from {{inh|en|ang|behealdan||to hold, have, occupy
 * {{a|UK}} {{IPA|en|/bɪˈhəʊld/}}
 * {{a|GenAm}} {{IPA|en|/bɪˈhoʊld/}}
 * {{audio|en|en-us-behold.ogg|Audio (US)}}
+* {{rhymes|en|əʊld|oʊld|s=2}}
 
 ===Verb===
 {{en-verb|beholds|beholding|beheld|past_ptc2=beholden|past_ptc2_qual=rare}}
