--- a/en/m/marmot.8229.wikitext
+++ b/en/m/marmot.8229.wikitext
@@ -7,6 +7,7 @@ From {{bor|en|frm|marmote}}, from {{der|en|fro|marmotaine}}, {{m|fro|marmontaine
 ===Pronunciation===
 * {{IPA|en|/ˈmɑɹ.mət/}}
 * {{audio|en|LL-Q1860 (eng)-Vealhurl-marmot.wav|Audio (Berkshire, UK)}}
+* {{rhymes|en|ɑɹmət|s=2}}
 * {{hyphenation|en|mar|mot}}
 
 ===Noun===
