--- a/en/b/barbera.745859.wikitext
+++ b/en/b/barbera.745859.wikitext
@@ -98,7 +98,7 @@ From {{af|nn|barber|-a}}.
 
 # {{female equivalent of|es|barbero|t=barber}}
 # [[barber]]'s wife
-# [[razor]], [[cutthroat razor]]
+# [[razor]], [[cut-throat razor]]
 #: {{syn|es|navaja barbera}}
 
 ===Further reading===
