--- a/en/u/unrighteousness.742246.wikitext
+++ b/en/u/unrighteousness.742246.wikitext
@@ -2,7 +2,7 @@
 
 ===Etymology===
 {{root|en|ine-pro|*h₃reǵ-}}
-From {{affix|en|un-|righteousness}} or {{affix|en|unrighteous|-ness}}.
+From {{inh|en|enm|unriȝtwisnesse}}, from {{inh|en|ang|unrihtwīsnes}}; equivalent to {{affix|en|un-|righteousness}} or {{affix|en|unrighteous|-ness}}.
 
 ===Noun===
 {{en-noun|-}}
