/* Noun */  (using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]]) <genet#65857165>

--- a/en/g/genet.746610.wikitext
+++ b/en/g/genet.746610.wikitext
@@ -94,8 +94,7 @@ See {{m|en|jennet}}.
 {{en-noun}}
 
 # A small-sized, well-proportioned, [[Spanish]] [[horse]]; a [[jennet]].
-#* '''1603''', {{w|William Shakespeare}}, ''{{w|Othello}}'', Act 1, Scene 1:109-113
-#*: Because we come to do you service and you think we are ruffians, you’ll have your daughter covered with a Barbary horse. You’ll have your nephews neigh to you. You’ll have coursers for cousins and '''gennets''' for germans.
+#* {{RQ:Shakespeare Othello|1|1|line=109-113|text=Because we come to do you service and you think we are ruffians, you’ll have your daughter covered with a Barbary horse. You’ll have your nephews neigh to you. You’ll have coursers for cousins and '''gennets''' for germans.}}
 
 ===Anagrams===
 * {{anagrams|en|a=eegnt|tenge}}
