--- a/en/o/ostensive.773720.wikitext
+++ b/en/o/ostensive.773720.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From {{etyl|fr|en}} {{m|fr|ostensif}}, from {{etyl|ML.|en}} {{m|la|ostensivus}}
+From {{der|en|fr|ostensif}}, from {{der|en|ML.|-}} {{m|la|ostensivus}}
 
 ===Adjective===
 {{en-adj}}
