/* German */ adding adjective sense <mega#65858591>

--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -205,19 +205,28 @@ From {{inh|fo|non|mega}}, from {{inh|fo|gem-pro|*maganą}}, from {{der|fo|ine-pr
 
 ==German==
 
+===Alternative forms===
+* {{alter|de|mega-}}
+
 ===Etymology===
 {{conversion|de|mega-}}.
 
 ===Adverb===
 {{de-adv}}
 
-# {{lb|de|colloquial|somewhat|_|juvenile}} [[very]], [[bare]], [[mad]]
+# {{lb|de|colloquial|somewhat|_|childish}} [[very]], [[bare]], [[mad]]
 #: {{syn|de|Thesaurus:sehr}}
-#: {{uxi|de|Das ist '''mega'''einfach.|It’s bare easy.}}
-#: {{uxi|de|Er freute sich '''mega'''.|He was gassed mad.}}
+#: {{uxi|de|Das ist '''mega'''einfach.|It’s '''bare''' easy.}}
+#: {{uxi|de|Er freute sich '''mega'''.|He was gassed '''mad'''.}}
 
 ====Usage notes====
 Often written together with the next word, as if compounding a new word, or analyzed as prefix.
+
+===Adjective===
+{{de-adj|-}}
+
+# {{lb|de|slang|chiefly|predicative}} [[awesome]], [[amazing]]Z
+#: {{uxi|de|Die Party gestern war '''mega'''.|That party last night was '''awesome'''.}}
 
 ----
 
