t+ru:[[святый боже]] ([[WT:EDIT|Assisted]]) <good Lord#65863134>

--- a/en/g/good Lord.741512.wikitext
+++ b/en/g/good Lord.741512.wikitext
@@ -21,4 +21,5 @@
 * Hebrew: {{t|he|אֱלֹהִים אַדִּירִים|tr=elohím adirím}}
 * Hungarian: {{t+|hu|atyaúristen}}
 * Japanese: {{t|ja|おやまあ|tr=oyamaa|sc=Jpan}}
+* Russian: {{t|ru|свя́тый бо́же}}
 {{trans-bottom}}
