--- a/en/n/nove.26046.wikitext
+++ b/en/n/nove.26046.wikitext
@@ -25,7 +25,8 @@ From {{inh|co|la|novem}}, from {{inh|co|itc-pro|*nowem}}, from {{inh|co|ine-pro|
 ==Esperanto==
 
 ===Pronunciation===
-* {{audio|eo|LL-Q143 (epo)-Lepticed7-nove.wav|Audio}}
+* {{audio|eo|LL-Q143 (epo)-Lepticed7-nove.wav|Audio:}}
+{{eo-IPA}}
 
 ===Adverb===
 {{eo-head}}
