--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -104,7 +104,7 @@ Compare {{cog|cy|benn||cart}}, {{cog|la|offendīx||knot, band}}, {{cog|lt|beñdr
 *: Middle High German: {{t|gmh|binden}}
 *: Old High German: {{t|goh|bintan}}
 * Gothic: {{t|got|𐌱𐌹𐌽𐌳𐌰𐌽}}
-* Greek:
+* Greek: {{t|grc|δένω}}
 *: Ancient: {{t|grc|δέω}}
 * Hindi: {{t|hi|छांदना}}
 * Icelandic: {{t+|is|binda}}
