/* French */ desc <mouflon#65884426>

--- a/en/m/mouflon.8242.wikitext
+++ b/en/m/mouflon.8242.wikitext
@@ -95,6 +95,9 @@ From {{bor|fr|it|muflone}}
 
 # [[#English|mouflon]]
 
+====Descendants====
+* {{desc|en|mouflon|bor=1}}
+
 ===Further reading===
 * {{R:TLFi}}
 
